# convnext-experiments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
classification_baseline_experiment/: config.py  datasets.py  models.py  transforms.py
convnext_experiments/classification_baseline_experiment/: README.md  datasets.py  main.py  training.py
convnext_experiments/convnext_vs_vit_comparison/: README.md  benchmark.py  config.py  data_loading.py  main.py  metrics.py  models.py  training.py  transforms.py  utils.py
convnext_experiments/datasets_comparison_benchmark/: README.md  __init__.py  benchmark.py  config.py  data_loading.py  datasets.py  main.py  metrics.py  models.py  training.py  transforms.py  utils.py
convnext_experiments/datasets_comparison_benchmark/runs/mlruns/0/: meta.yaml
convnext_experiments/datasets_comparison_benchmark/runs/mlruns/302345063648514564/: meta.yaml
convnext_experiments/datasets_comparison_benchmark/runs/mlruns/302345063648514564/4274a5bb8ae64e56a4475af6ad48b89d/: meta.yaml
convnext_experiments/datasets_comparison_benchmark/runs/mlruns/302345063648514564/4274a5bb8ae64e56a4475af6ad48b89d/metrics/: best_val_acc  f1_score  learning_rate  precision  test_acc  test_loss  train_acc  train_loss  val_acc  val_loss
convnext_experiments/datasets_comparison_benchmark/runs/mlruns/302345063648514564/7e8ad644651d450e8b847362bc8fedf3/: meta.yaml
convnext_experiments/datasets_comparison_benchmark/runs/mlruns/302345063648514564/d0193f2f030f454587c59621cf2d8b86/: meta.yaml
(+79 files in other folders)
