[project]
name = "convnext-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "pre-commit>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["convnext_experiments"]
